...

        <TextView
          android:id="@+id/header"
          android:layout_width="@dimen/match_constraints"
          android:layout_height="wrap_content"
          android:text="@string/select_profile_add_profile"
          android:textAppearance="?textAppearanceHeadline2"
          app:layout_constraintEnd_toEndOf="@id/content"
...

        <ImageView
          android:id="@+id/add_photo_image"
          android:layout_width="@dimen/profile_header_avatar"
          android:layout_height="@dimen/profile_header_avatar"
...

        <TextView
          android:id="@+id/add_photo_title"
          android:layout_width="@dimen/match_constraints"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dot_double"
          android:gravity="center"
          android:text="@string/add_profile_add_a_photo"
          android:textAppearance="?textAppearanceHeadline5"
          app:layout_constraintEnd_toEndOf="@id/content"
...

        <TextView
          android:id="@+id/name_input_title"
          android:layout_width="@dimen/match_constraints"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dot_quad"
          android:text="@string/onboarding_sign_up_subtitle"
          android:textAppearance="?textAppearanceHeadline5"
          app:layout_constraintEnd_toEndOf="@id/content"
...
          android:layout_marginTop="@dimen/dot"
          android:enabled="@{viewModel.nameInputEnabled}"
          android:hint="@string/onboarding_sign_up_name_hint"
          app:error="@{viewModel.nameValidationError}"
          app:layout_constraintEnd_toEndOf="@id/content"
...

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <TextView
          android:id="@+id/birthday_input_title"
          android:layout_width="@dimen/match_constraints"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dot_trip"
          android:text="@string/add_profile_birthday_title"
          android:textAppearance="?textAppearanceHeadline5"
          app:layout_constraintEnd_toEndOf="@id/content"
...

        <TextView
          android:id="@+id/birthday_input_optional"
          android:layout_width="@dimen/match_constraints"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dot_trip"
          android:gravity="end"
          android:text="@string/add_profile_optional"
          android:textAppearance="?textAppearanceSubtitle1"
          app:layout_constraintBaseline_toBaselineOf="@id/birthday_input_title"
...
          android:layout_marginTop="@dimen/dot"
          android:enabled="@{viewModel.nameInputEnabled}"
          android:hint="@string/add_profile_birthday_hint"
          app:error="@{viewModel.birthdayValidationError}"
          app:layout_constraintEnd_toEndOf="@id/content"
...

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthday_input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <TextView
          android:id="@+id/gender_input_title"
          android:layout_width="@dimen/match_constraints"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dot_trip"
          android:text="@string/add_profile_gender_title"
          android:textAppearance="?textAppearanceHeadline5"
          app:layout_constraintEnd_toEndOf="@id/content"
...

        <TextView
          android:id="@+id/gender_input_optional"
          android:layout_width="@dimen/match_constraints"
          android:layout_height="wrap_content"
...
          android:layout_marginTop="@dimen/dot"
          android:enabled="@{viewModel.nameInputEnabled}"
          android:hint="@string/add_profile_choose_hint"
          app:layout_constraintEnd_toEndOf="@id/content"
          app:layout_constraintStart_toStartOf="@id/content"
...

          <AutoCompleteTextView
            android:id="@+id/gender_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <TextView
          android:id="@+id/handedness_input_title"
          android:layout_width="@dimen/match_constraints"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dot_trip"
          android:text="@string/add_profile_handedness_title"
          android:textAppearance="?textAppearanceHeadline5"
          app:layout_constraintEnd_toEndOf="@id/content"
...

        <TextView
          android:id="@+id/handedness_input_optional"
          android:layout_width="@dimen/match_constraints"
          android:layout_height="wrap_content"
...

          <AutoCompleteTextView
            android:id="@+id/handedness_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <TextView
          android:id="@+id/checkbox_subtitle"
          android:layout_width="@dimen/match_constraints"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dot_quin"
          android:text="@string/onboarding_sign_up_consent_header"
          android:textAppearance="?textAppearanceHeadline6"
          app:layout_constraintEnd_toEndOf="@id/content"
...

        <CheckBox
          android:id="@+id/terms_and_conditions_checkbox"
          style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
          android:layout_width="wrap_content"
...

        <TextView
          android:id="@+id/terms_and_conditions_part1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/dot_quin"
          android:text="@string/onboarding_sign_up_consent"
          android:textAppearance="?textAppearanceBody2"
          app:layout_constraintBaseline_toBaselineOf="@id/terms_and_conditions_checkbox"
...

        <TextView
          android:id="@+id/terms_and_conditions_part2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
...

        <CheckBox
          android:id="@+id/privacy_policy_checkbox"
          style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
          android:layout_width="wrap_content"
...

        <TextView
          android:id="@+id/privacy_policy_part1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
...

        <TextView
          android:id="@+id/privacy_policy_part2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
...

        <Button
          android:id="@+id/add_profile_button"
          style="@style/Widget.Button"
          android:layout_width="@dimen/match_constraints"
...

    <View
      android:id="@+id/progress_background"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
...

    <com.google.android.material.card.MaterialCardView
      android:id="@+id/progress_view"
      android:layout_width="@dimen/match_constraints"
      android:layout_height="wrap_content"
...
