...
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme">

    <ImageView
      android:id="@+id/dialog_select_avatar_icon"
      android:layout_width="@dimen/dot_quin"
      android:layout_height="@dimen/dot_quin"
      android:layout_marginStart="@dimen/dot_double"
      android:visibility="@{showCurrentProfile ? View.VISIBLE : View.GONE}"
      app:layout_constraintBottom_toBottomOf="@id/dialog_select_avatar_title"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@id/dialog_select_avatar_title"
      app:profileAvatarUrl="@{viewModel.avatarUrl}"
      app:profileName="@{viewModel.profileName}" />

    <TextView
...
