...
    <string name="legacy_secret_settings">"Legacy Secret Settings"</string>
    <string name="settings_item_admin_settings">"admin settings"</string>

    <!-- Please remember that this string needs to contain `onboarding_get_ready_header_highlight` (like trailing fullstop) - otherwise highlight won't be rendered -->
    <string name="onboarding_get_ready_header">"Get ready for a real connection"</string>
    <string name="onboarding_get_ready_header_highlight">" "</string>
    <string name="onboarding_sign_up_consent_privacy_policy_link">"privacy policy"</string>
    <string name="onboarding_sign_up_consent_terms_conditions_link">"terms &amp; conditions"</string>
    <string name="home_toolbar_title_format">"Hi %1$s"</string>
    <string name="earning_points_detail_body"><![CDATA[<p>Each time you brush, you receive at least 1 smile point. You can have 3 eligible brushing sessions a day. Earn more smile points by completing activities and challenges. </p>

<p>Use the Shop in the app to redeem your smile points for rewards.*</p>

<p><b>100 smile points = $1 discount*</b></p>
...
